  - DM で送信する場合は、エラーレポートを圧縮した上で @OpenTween 宛に送られます
 * CHG: Retweetイベントのイベント一覧での表示を他のイベントと統一 (thx @naminodarie!)
 * CHG: スペースキーで未読ツイートに移動する順序を、発言一覧を日付順以外で並び替えた状態であっても表示順に移動するように修正
  - OpenTween v1.2.4 以前と同じ動作になりました
 * CHG: プロフィール画面の「Web」「自己紹介」のURLを展開して表示するように変更 (thx @naminodarie!)
 * CHG: Foursquareのサムネイル表示機能でチェックインURLの仕様変更に対応
 * CHG: 「APIコマンドを回避する」の機能を廃止
 * FIX: Home/Endキーの直後に左右キーを押すと以前の選択ツイートの関連発言に移動してしまう不具合を修正 (thx @coookien!)
 * FIX: 発言詳細部のコンテキストメニューからURLのコピーを実行すると「&」が「&amp;」としてコピーされる不具合を修正 (thx @pO_0q!)
 * FIX: タイムラインの流速が速い時に発言一覧のスクロールバーがちらつく現象を修正
 * FIX: ハッシュタグ設定画面で複数のハッシュタグを選択して削除する機能が正しく動作しない不具合を修正 (thx @Tan90909090!)
 * FIX: RetweetイベントのTargetに「&gt;」「&lt;」などがデコードされずに表示されていた不具合を修正 (thx @naminodarie!)
 * FIX: 高DPI環境で一部の画面のレイアウトが崩れる問題を修正
  - 設定画面の「更新間隔」「発言一覧」や振り分けルール編集画面のリスト項目の高さなど
 * FIX: 不正なツイートURLを含む発言を受信するとエラーが発生する不具合を修正
 * FIX: リスト編集画面でリストメンバーの取得ボタンを連打するとエラーが発生する不具合を修正
 * FIX: サムネイル枠の横幅が起動するたびに広がる不具合を修正
 * FIX: 「新着時に未読をクリアする」を有効にした状態で長時間動作させると動作が非常に重くなる不具合を修正 (thx @nezuku!)
 * FIX: 絵文字を含むURLの入ったツイートを選択すると発言詳細部に壊れたテキストが表示される不具合を修正
 * FIX: 短縮URLの展開によってツイートの受信が遅延しないように改善
 * FIX: pbs.twimg.orgのURLの末尾に :orig 等が付いていると、ブラウザで開く画像URLに :orig が二重に付いてしまう不具合を修正

==== Ver 1.2.9(2015/09/23)
 * NEW: ウィンドウ最大化中でも発言詳細部やサムネイルの幅の変更が設定に保存されるようしました
 * NEW: タイトルバーに表示する「発言数/フォロー数/フォロワー数」の情報が起動直後から反映されるようにしました
 * CHG: 起動時にTwitter APIへのアクセスに失敗した場合はエラーダイアログを表示するようにしました
 * FIX: ハッシュタグ付加機能が動作しない不具合を修正
 * FIX: サムネイル画像にフォーカスがない状態でマウスホイールによる画像の切り替えが動作しない不具合を回避
 * FIX: 起動直後の初回のDM一覧取得が失敗する不具合を修正

==== Ver 1.2.8(2015/09/06)
 * NEW: DMの文字数制限の緩和（上限10,000文字）に対応しました（投稿および表示）
 * NEW: サムネイル画像が複数枚ある場合に、マウスホイールでも画像を切り替えられるようにしました
 * NEW: サムネイル画像のメニューに「類似画像検索 (SauceNAO)」を追加しました
  - Google画像検索でヒットしないpixivのイラストからも類似画像を検索できます
 * NEW: 文字数上限を超えている状態であっても強制的に投稿を実行できるようにしました
  - クライアント側の文字数の誤カウントやTwitterが正しくないDM上限文字数を返すような状況が起きた場合の回避策です
  - 普通は強制的に投稿してもエラーで失敗します
 * CHG: 文字数上限を超えているときに自動で末尾をカットして投稿する機能を削除しました
 * FIX: 上下キーなどで選択ツイートを移動した直後に左右キーなどによる関連ツイートの移動が正しく動作しない不具合を修正