@@ -10,6 +10,7 @@
  * CHG: プロフィール画面の「Web」「自己紹介」のURLを展開して表示するように変更 (thx @naminodarie!)
  * CHG: Foursquareのサムネイル表示機能でチェックインURLの仕様変更に対応
  * CHG: 「APIコマンドを回避する」の機能を廃止
+ * CHG: Ctrl+Insert キーで Ctrl+C と同じ機能が実行されるように変更 (Ctrl+Shift+Insert, Alt+Shift+Insert も同様)
  * FIX: Home/Endキーの直後に左右キーを押すと以前の選択ツイートの関連発言に移動してしまう不具合を修正 (thx @coookien!)
  * FIX: 発言詳細部のコンテキストメニューからURLのコピーを実行すると「&」が「&amp;」としてコピーされる不具合を修正 (thx @pO_0q!)
  * FIX: タイムラインの流速が速い時に発言一覧のスクロールバーがちらつく現象を修正
